--- a/Project2Frontend/WebContent/views/jobs.html
+++ b/Project2Frontend/WebContent/views/jobs.html
@@ -1,5 +1,8 @@
+
 <div class="container">
-<b>List of Person Details</b>
+<br>
+<br>
+<b>List of Job Details</b>
 <span style="color:red">{{error.errorMsg}}</span>
 
 <table class="table table-striped" border="1">
