--- a/Project2Frontend/WebContent/resources/css/custom.css
+++ b/Project2Frontend/WebContent/resources/css/custom.css
@@ -1,5 +1,96 @@
-@charset "ISO-8859-1";
-option { 
-    /* Whatever color  you want */
-    background-color: #fbc02d;
+@CHARSET "ISO-8859-1";
+body{
+	
+	font:Times New Roman;
+}
+box{
+	width:200px;
+}
+.form_login {
+	width:0 auto;
+	padding:20px;
+	text-align: center;
+	vertical-align: middle;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	margin: 5% auto;
+	background-color:#808000;
+}
+
+.form-option{
+	padding:0px;
+	margin:0px auto;
+}
+
+#myNavbar{
+	color:white;
+}
+
+.navbar-default{
+	background-color:#808000;
+	color:white
+}
+
+.navbar-default a{
+	color:white;
+}
+
+ul{
+	    list-style-type: none;
+}
+
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    color:white;
+    background-color: #808000; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+    padding: 8px 20px 10px 20px;
+    text-decoration: none;
+    
+    color: white;
+    display: block;
+    transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 20px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+    transition: margin-left .5s;
+   
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+
+div#mySidenav.sidenav{
+	width:30%;
 }
