--- a/Project2Frontend/WebContent/views/blogform.html
+++ b/Project2Frontend/WebContent/views/blogform.html
@@ -1,6 +1,20 @@
-<span style="color:red">{{error.errorMessage}}</span>
-<form>
-Enter title : <input type="text" ng-model="blog.blogTitle"><br>
-Enter content : <textarea rows="5" cols="30" ng-model="blog.blogContent"></textarea><br>
-<button ng-click="addBlog(blog)" class="btn btn-info">Add Button</button>
-</form>
+
+<div class="box">
+	<div class="form_login">
+		<span style="color: red">{{error.errorMessage}}</span>
+		<form>
+			<div class="form-option">
+				<label>Enter title : <input type="text"
+					ng-model="blog.blogTitle"></label>
+			</div>
+			<br>
+			<div class="form-option">
+				<label> Enter content : <textarea rows="5" cols="30"
+						ng-model="blog.blogContent"></textarea></label>
+			</div>
+			<br>
+			<button ng-click="addBlog(blog)" class="btn btn-info">Add
+				Button</button>
+		</form>
+	</div>
+</div>
