--- a/Project2Frontend/WebContent/views/jobform.html
+++ b/Project2Frontend/WebContent/views/jobform.html
@@ -1,18 +1,51 @@
-<span style="color:red">{{error.errorMessage}}</span>
-<div ng-show="user.role!='ADMIN'">Access Denied</div>
-<div ng-show="user.role == 'ADMIN'">
+<div class="box">
+	<div class="form_login">
 
-<form>
-Enter Job Title : <input type="text" ng-model="job.jobTitle"><br>
-Enter Job Description : <input type="text" ng-model="job.jobDescription"><br>
-Enter Job Location : <input type="text" ng-model="job.location"><br>
-Enter Salary : <input tupe="text" ng-model="job.salary"><br>
-Enter Skills Required : <input type="text" ng-model="job.skillsRequired"><br>
-Enter Years Of Experience : <input type="text" ng-model="job.yrsOfExp"><br>
-Enter Company Name : <input type="text" ng-model="job.companyName"><br>
+		<span style="color: red">{{error.errorMessage}}</span>
+		<div ng-show="user.role!='ADMIN'">Access Denied</div>
+		<div ng-show="user.role == 'ADMIN'">
 
-<button class="btn btn-info" ng-click="addJob(job)">Add Job</button> 
+			<form>
+				<div class="form-option">
+					<label> Enter Job Title : <input type="text"class="form-control"
+						ng-model="job.jobTitle"></label>
+				</div>
+				<br>
+				<div class="form-option">
+					<label> Enter Job Description : <input type="text"class="form-control"
+						ng-model="job.jobDescription"></label>
+				</div>
+				<br>
+				<div class="form-option">
+					<label>Enter Job Location : <input type="text"class="form-control"
+						ng-model="job.location"></label>
+				</div>
+				<br>
+				<div class="form-option">
+					<label>Enter Salary : <input tupe="text"class="form-control"
+						ng-model="job.salary"></label>
+				</div>
+				<br>
+				<div class="form-option">
+					<label>Enter Skills Required : <input type="text"class="form-control"
+						ng-model="job.skillsRequired"></label>
+				</div>
+				<br>
+				<div class="form-option">
+					<label>Enter Years Of Experience : <input type="text"class="form-control"
+						ng-model="job.yrsOfExp"></label>
+				</div>
+				<br>
+				<div class="form-option">
+					<label>Enter Company Name : <input type="text"class="form-control"
+						ng-model="job.companyName"></label>
+				</div>
+				<br>
+
+				<button class="btn btn-info" ng-click="addJob(job)">Add Job</button>
 
 
-</form>
+			</form>
+		</div>
+	</div>
 </div>
