--- a/Project2Frontend/WebContent/views/blogApprovalForm.html
+++ b/Project2Frontend/WebContent/views/blogApprovalForm.html
@@ -1,8 +1,8 @@
 
 <span style="color: red">{{error.errorMessage}}</span>
-<div class="container" ng-show="user.role=='ADMIN'">
+<div class="container-fluid" ng-show="user.role=='ADMIN'"style="color:white">
 	<div class="panel panel-info">
-		<div class="panel-heading">
+		<div class="panel-heading"style="color:white">
 			<b>Blog Title </b> {{blogPost.blogTitle}}<br> 
 			<b>Posted On </b>{{blogPost.postedOn| date :'dd-MM-yyyy'}}<br> 
 			<b>Posted By </b>{{blogPost.postedBy.firstname}}&nbsp; {{blogPost.postedBy.lastname}}<br> 
