--- a/Project2Frontend/WebContent/js/themes/explorer/theme.css
+++ b/Project2Frontend/WebContent/js/themes/explorer/theme.css
@@ -97,14 +97,14 @@
 
 .theme-explorer .kvsortable-ghost {
     opacity: 0.6;
-    background: #e1edf7;
-    border: 2px solid #a1abff;
+    background: #804040;
+    border: 2px solid #804040;
 }
 
 @media only screen and (max-device-width: 500px) {
     .theme-explorer .file-upload-indicator, .theme-explorer .file-drag-handle {
         border-radius: 0;
-        border: 1px solid #8a6d3b;
+        border: 1px solid #804040;
         margin-bottom: 5px;
     }
 
@@ -122,27 +122,27 @@
 .theme-explorer .file-upload-indicator {
     font-size: 13px;
     padding-left: 6px;
-    background-color: #fcf8e3;
-    border-color: #faebcc;
+    background-color: #804040;
+    border-color: #804040;
 }
 
 .theme-explorer .file-drag-handle {
     right: -2px;
-    background-color: #d9edf7;
-    border-color: #bce8f1;
+    background-color: #804040;
+    border-color: #804040;
 }
 
 .theme-explorer .file-preview-error .file-upload-indicator {
-    background-color: #f2dede;
-    border-color: #ebccd1;
+    background-color: #804040;
+    border-color: #804040;
 }
 
 .theme-explorer .file-preview-success .file-upload-indicator {
-    background-color: #dff0d8;
-    border-color: #d6e9c6;
+    background-color: #804040;
+    border-color: #804040;
 }
 
 .theme-explorer .file-preview-loading .file-upload-indicator {
-    background-color: #e5e5e5;
-    border-color: #777;
+    background-color: #804040;
+    border-color: #804040;
 }
