--- a/Project2Frontend/WebContent/resources/css/notification.css
+++ b/Project2Frontend/WebContent/resources/css/notification.css
@@ -17,9 +17,10 @@
 .dropdown-content {
     display: block;
     position: absolute;
-    background-color: #f9f9f9;
-    min-width: 250px;
+    background-color: #804000;
+    
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
+    padding: 8px 8px;
     z-index: 1;
+    color:white
 }
