--- a/Project2Frontend/WebContent/views/blogApproved.html
+++ b/Project2Frontend/WebContent/views/blogApproved.html
@@ -1,12 +1,10 @@
-<div class="container">
+
 	<div class="panel panel-info">
-		<div class="panel-heading">
-			<b>List of Blog's Approved</b>
-		</div>
+		
 		<div class="panel-body">
 			<b ng-show="blogs.length==0">No Approved blogs</b>
 			<ul style="list-style: none;">
-				<li ng-repeat="blog in  blogs"><a
+				<li ng-repeat="blog in  blogs | orderBy :'-postedOn'"><a
 					href="#/getBlogApproved/{{blog.id}}"><b>Blog Title: </b>{{blog.blogTitle}}<br></a>
 					<b>Posted On:</b>{{blog.postedOn | date:'dd-MM-yyyy'}}<br> <b>Posted
 						By:</b>{{blog.postedBy.firstname}} &nbsp; {{blog.postedBy.lastname}}<!-- firstname and lastname of the user who posted the blog -->
@@ -15,4 +13,4 @@
 			</ul>
 		</div>
 	</div>
-</div>
+
